# SevenWebser

./: Cargo.toml
src/: dbus.rs  lib.rs  read_prefs.rs
src/web/: dane_systemu.rs  funkcje.rs  funkcje_wypelniania.rs  mod.rs  plot.rs  struktura_chat.rs  struktura_web.rs
