[package]
name = "seven_webser"
version = "0.1.0"
authors = ["xvgray <xvgray@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = "0.4.6"
steam-auth = "1.0.0"
my_internet_ip = "0.1.1"
dirs = "3.0.1"

chrono = "0.4"
sysinfo = "0.15.3"
os_info = "3.0"
num_cpus = "1.13.0"

log = "0.4.11"
simple-logging = "2.0.2"

gnuplot = "0.0.37"

lazy_static = "1.4.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.4.0"

dbus = "0.9.1"